--- a/Basic Website/index.html
+++ b/Basic Website/index.html
@@ -33,18 +33,16 @@
                 <div class="fakeimg" style="height:200px;"><img
                         src="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80"
                         style="height: 232px"></div>
-                <div class="ShortNote">We only use clean and healthy indregients to ensure our cookies taste best and
-                    are
-                    actually delicious..</div>
+                <p>We only use clean and healthy indregients to ensure our cookies taste best and are actually delicious..</p>
                 <br>
 
             </div>
-            <div class="main">
+            <div class="side">
                 <h2>Where are we located?</h2>
                 <h5>oct 15, 2021</h5>
-                <div class="image1" style="height: 200px;"><img
+                <div class="fakeimg" style="height: 200px;"><img
                         src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29va2llfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80"
-                        style="height:215px;"></div>
+                        style="height:232px;"></div>
                 <p>We will be found in your neighbouring town or cities, plz make sure to visit by...</p>
                 <br>
 
