--- a/Basic Website/Basic-layout/index.html
+++ b/Basic Website/Basic-layout/index.html
@@ -41,7 +41,7 @@
         font-family: 'Comfortaa', cursive;
         background-color: rgba(248, 184, 20, 0.562);
         border-radius: 8px;
-        padding: 5px;
+        padding: 6px;
 
     }
     .heading{
@@ -74,7 +74,7 @@
     <div class="body-box">
         <div class="box-1">
            <div class="heading">
-            <p class="above-head">Think Future - Think  <span class="digital">Digital Marketing</span></p>
+            <p class="above-head">Think Future - Think WIDE <span class="digital">Digital Marketing</span></p>
            <h1>THE</h1>
            <h1>
             <span class="career">Career</span>
@@ -88,7 +88,7 @@
                </div>
                <p>By Saloni Dwivedi</p>
                <hr>
-               <p> <b> As the world is getting more and more digitalised in every respect, Digital Marketing is a booming career option today. There's 1,50,000 digital jobs predicted by 2025 and not enough digital professionals to fill them. This provides those studying digital Marketing with a unique competitive advantage- you are gearing yourself up for a career where demand exceeds supply.</b></p>
+               <p> <b> As the world is getting more and more digitalised in every respect, Digital Marketing is a booming career option today. There's 1,50,000 digital jobs predicted by 2025 and not enough digital professionals to fill them. This provides those studying digital Marketing with a unique competitive advantage- you are gearing yourself up for a career where demand exceeds supply. So, start making your future your way today.</b></p>
            </div>
         </div>
     </div>
