--- a/Basic Website/web-art-of-Dr.-apj-Abdul-kalam-main/index.html
+++ b/Basic Website/web-art-of-Dr.-apj-Abdul-kalam-main/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Dr. Apj Abdul Kalam </title>
+  <title>Dr. A.P.J Abdul Kalam </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
