--- a/css-calculator/index.html
+++ b/css-calculator/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="a css calculator">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon (4).ico">
     </head>
     <body>
         <form class="calculator" name="calc">
