--- a/Basic Website/index.html
+++ b/Basic Website/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="header">
-        <h1>Welcome to my website</h1>
-        <p>A cookies website created by me</p>
+        <h1> <span class="first">Welcome</span> to my website</h1>
+        <h2 class="second_heading">A cookies website created by me</h2>
     </div>
     <div class="nav-bg">
         <div class="row">
@@ -33,7 +33,8 @@
                 <div class="fakeimg" style="height:200px;"><img
                         src="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80"
                         style="height: 232px"></div>
-                <p>We only use clean and healthy indregients to ensure our cookies taste best and are actually delicious..</p>
+                <p>We only use clean and healthy indregients to ensure our cookies taste best and are actually
+                    delicious..</p>
                 <br>
 
             </div>
