Beautifying some aspects of the website

--- a/E-commerce website/index.html
+++ b/E-commerce website/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -20,15 +19,15 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                  <a href="index.html"><img src="./images/logo.png" width="120px"></a>
+                    <a href="index.html"><img src="./images/logo.png" width="120px"></a>
                 </div>
                 <nav>
                     <ul id="menuitems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="product.html">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
+                        <li><a class="anchor anchor1" href="index.html">Home</a></li>
+                        <li><a class="anchor" href="product.html">Products</a></li>
+                        <li><a class="anchor" href="">About</a></li>
+                        <li><a class="anchor" href="">Contact</a></li>
+                        <li><a class="anchor" href="account.html">Account</a></li>
                     </ul>
                 </nav>
                 <a href="cart.html"><img src="./images/cart.png" width="30px" height="30px"></a>
@@ -36,8 +35,10 @@
             </div>
             <div class="row">
                 <div class="col-2">
-                    <h1>Give Your Workout <br> A New Style!</h1>
-                    <p>Success isn't always about greatness. It's about consistency. Consistent <br> hard work gains
+                    <h1 class="first_heading">Give Your Workout <br> A New <span class="first">Style</span><span
+                            class="second">!</span></h1>
+                    <p class="first_para">Success isn't always about greatness. It's about consistency. Consistent <br>
+                        hard work gains
                         success. Greatness will come.</p>
                     <a href="" class="btn">Explore Now &#8594;</a>
                 </div>
@@ -72,8 +73,10 @@
         <h2 class="title">Featured Products</h2>
         <div class="row">
             <div class="col-4">
-               <a href="product-detail.html"><img src="./images/tshirt1.jpg"  ></a>
-                <a href="product-detail.html"><h4>Mix Color Printed T-shirt</h4></a>
+                <a href="product-detail.html"><img src="./images/tshirt1.jpg"></a>
+                <a href="product-detail.html">
+                    <h4>Mix Color Printed T-shirt</h4>
+                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -97,7 +100,7 @@
                 <p><b>$80.00</b></p>
             </div>
             <div class="col-4">
-                <img src="./images/shoes1.jpg" >
+                <img src="./images/shoes1.jpg">
                 <h4>Levis White Shoes</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -124,7 +127,7 @@
         <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="./images/product-5.jpg" >
+                <img src="./images/product-5.jpg">
                 <h4>Nicky Grey shoes</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -137,7 +140,7 @@
 
             </div>
             <div class="col-4">
-                <img src="./images/product-6.jpg" >
+                <img src="./images/product-6.jpg">
                 <h4>Puma Black T-shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -161,7 +164,7 @@
                 <p><b>$40.00</b></p>
             </div>
             <div class="col-4">
-                <img src="./images/product-8.jpg" >
+                <img src="./images/product-8.jpg">
                 <h4>Fossil Men Wrist Watch</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -188,7 +191,7 @@
 
             </div>
             <div class="col-4">
-                <img src="./images/product-10.jpg" >
+                <img src="./images/product-10.jpg">
                 <h4>X casual shoes</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -212,7 +215,7 @@
                 <p><b>$35.00</b></p>
             </div>
             <div class="col-4">
-                <img src="./images/product-12.jpg" >
+                <img src="./images/product-12.jpg">
                 <h4>Nike Relaxed Jogger</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -369,12 +372,10 @@
         var menuitems = document.getElementById("menuitems");
         menuitems.style.maxHeight = "0px";
         function menutoggle() {
-            if (menuitems.style.maxHeight == "0px")
-            {
+            if (menuitems.style.maxHeight == "0px") {
                 menuitems.style.maxHeight = "200px";
             }
-              else
-            {
+            else {
                 menuitems.style.maxHeight = "0px";
             }
         }
